<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SunnySouth</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_profile">Mi Cuenta</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Registrar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_subtitle">genericsl@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="dont_have_account">¿No tienes una cuenta?</string>
    <string name="create_account">. Crea una aquí</string>
    <string name="name_register">Nombre</string>
    <string name="lastname_register">Apellido</string>
    <string name="error_data_user">Los datos ingresados no son válidos</string>
    <string name="error_in_login">Error en el login</string>
    <string name="error_in_ready_user">Error en la lectura del user</string>
    <string name="error_in_update_user">Error al actualizar los datos</string>
    <string name="data_invalid">Datos Inválidos</string>
    <string name="sign_off">Cerraste Sesión</string>
</resources>
